// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Array Simple 1`] = `
[
  "┏━━━┯━━━┯━━━┳━━━┯━━━┯━━━┳━━━┯━━━┯━━━┓",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┗━━━┷━━━┷━━━┻━━━┷━━━┷━━━┻━━━┷━━━┷━━━┛",
]
`;

exports[`Array Simple 2`] = `
[
  "╔═══╤═══╤═══╦═══╤═══╤═══╦═══╤═══╤═══╗",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╠═══╪═══╪═══╬═══╪═══╪═══╬═══╪═══╪═══╣",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╠═══╪═══╪═══╬═══╪═══╪═══╬═══╪═══╪═══╣",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╚═══╧═══╧═══╩═══╧═══╧═══╩═══╧═══╧═══╝",
]
`;

exports[`Array Variable Length 1`] = `
[
  "┏━━━┯━━━┯━━━┳━━━┯━━━┯━━━┳━━━┯━━━┯━━━┓",
  "┃   │   │   ┃   │   │   ┃   │   │   ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┗━━━┷━━━┷━━━┻━━━┷━━━┷━━━┻━━━┷━━━┷━━━┛",
]
`;

exports[`Array Variable Length 2`] = `
[
  "╔═══╤═══╤═══╦═══╤═══╤═══╦═══╤═══╤═══╗",
  "║   │   │   ║   │   │   ║   │   │   ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╠═══╪═══╪═══╬═══╪═══╪═══╬═══╪═══╪═══╣",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╠═══╪═══╪═══╬═══╪═══╪═══╬═══╪═══╪═══╣",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╟───┼───┼───╫───┼───┼───╫───┼───┼───╢",
  "║ 1 │ 2 │ 3 ║ 4 │ 5 │ 6 ║ 7 │ 8 │ 9 ║",
  "╚═══╧═══╧═══╩═══╧═══╧═══╩═══╧═══╧═══╝",
]
`;
